# phone_scan

./: .gitignore  Cargo.toml  android_env.ps1  build.rs  ios_env.sh  phone_scan.h
build_scripts/: build.py  windows_env.ps1
dev/scripts/: any2jpg.py  det_line.py  get_mark.py  test.py  test_batch.py  val.py
libs/ios/: phone_scan.h
src/: config.rs  lib.rs  models.rs
src/myutils/: image.rs  math.rs  mod.rs  myjson.rs  rendering.rs  test.rs
src/recognize/: assist_location.rs  engine.rs  fill.rs  location.rs  mod.rs
