[package]
name = "phone_scan"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
opencv = { version = "0.96.0", features = ["clang-runtime"] }
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[target.'cfg(target_os = "android")'.dependencies]
opencv = { version = "0.96.0", features = ["clang-runtime"] }

[target.'cfg(target_os = "ios")'.dependencies]
opencv = { version = "0.96.0", features = ["clang-runtime"] }

[profile.release]
opt-level = 3           # 最大优化等级
lto = true            # 跨 crate 链接时全局优化
codegen-units = 1       # 所有 crate 在同一个代码生成单元中
panic = "abort"         # panic 直接 abort
strip = true            # 移除符号表
debug = false           # 移除调试信息
overflow-checks = false # 关闭整数溢出检查



